# TrainsInterfaceHTN

./: .gitignore  CMakeLists.txt  Readme.md  commands.json  heres_how_launcher.py  heres_how_lunchpacking_htn.py  htn_non_ros.py  items.json  package.xml
save/: 1462383692.69.json  1462385768.23.json  1462391510.6.json  1462393895.71.json
save/base condition/: 1464485641.89.json user 26
utils/: Action.py  Container.py  HTN.py  Item.py  Map.py  World.py  commands.json  items.json
